[package]

name = "dxgi-win"
version = "0.1.0"
authors = ["bryal <96.bryal@gmail.com>"]
description = "FFI bindings to DXGI"
repository = "https://github.com/bryal/dxgi-rs"
readme = "README.md"
keywords = ["Windows", "DXGI", "Direct3D", "FFI"]
license = "MIT"
build = "build.rs"

[dependencies]
winapi = "*"