[package]
name = "dxgi-win"
version = "0.2.0"
authors = ["bryal <96.bryal@gmail.com>"]
description = "FFI bindings to DXGI"
repository = "https://github.com/bryal/dxgi-rs"
readme = "README.md"
documentation = "http://bryal.github.io/dxgi-rs/dxgi_win/"
keywords = ["Windows", "DXGI", "Direct3D", "FFI"]
license = "MIT"
build = "build.rs"

[dependencies]
winapi = "0.2"
